@@ -79,6 +79,8 @@ module Fairy
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
 
+    def_prop :LOCAL_INPUT_FILE_BUFFER_SIZE
+
     def_prop :N_MOD_GROUP_BY
     def_prop :HASH_MODULE
     def_prop :MOD_GROUP_BY_BUFFERING_POLICY
@@ -195,15 +197,17 @@ module Fairy
 
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
   CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 1000
+  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
-  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
+  CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "fairy/share/hash-md5"
   CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
   CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
+
+  CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
 
   CONF.SORT_SAMPLING_MIN = 100
   CONF.SORT_SAMPLING_MAX = 10000
@@ -337,7 +341,7 @@ end
 module Fairy
   class FairyAPP<BaseAPP
 
-    SUBCOMMANDS = ["cp", "rm", "master", "node", "inspector"]
+    SUBCOMMANDS = ["cp", "rm", "cat", "master", "node", "inspector"]
 
     def initialize
       super
