@@ -1,0 +1,70 @@
+#!/usr/bin/env ruby
+# encoding: UTF-8
+
+require "optparse"
+
+require "fairy"
+require "fairy/share/base-app"
+require "fairy/share/vfile"
+
+$0 = "fairy cat #{ARGV.join(' ')}"
+
+module Fairy
+  class CopyAPP<BaseAPP
+
+    def initialize
+      super
+
+      @master_host = ENV["FAIRY_MASTER_HOST"]
+      @master_host ||= CONF.MASTER_HOST
+      @master_port = ENV["FAIRY_MASTER_PORT"]
+      @master_port ||= CONF.MASTER_PORT
+
+      @sources = nil
+    end
+
+    def parse_arg
+      super
+      @sources = ARGV
+    end
+
+    def option_parser
+      super do |opt|
+	opt.on("-m VAL"){|val| @master_host = val}
+	opt.on("-h", "--master_host=VAL"){|val| @master_host = val}
+	opt.on("-p", "--master_port=VAL"){|val| @master_port = val}
+      end
+    end
+
+    def start
+      for src in @sources
+	cat(src, @target)
+      end
+    end
+
+    def cat(src, target)
+      if VFile.vfile?(src)
+	ret = cat_from_fairy(src, target)
+      else
+	ret = caat_on_local(src, target)
+      end
+    end
+
+    def cat_from_fairy(src, target)
+      fairy = Fairy.new(@master_host, @master_port)
+      
+      fairy.input(src).here.each{|l| print l}
+    end
+
+    def copy_on_local(src, target)
+      #system("cat", src)
+      fairy = Fairy.new(@master_host, @master_port)
+      
+      fairy.input(src).here.each{|l| print l}
+    end
+
+  end
+end
+
+Fairy::CopyAPP.start
+#sleep 10
