@@ -48,6 +48,27 @@ module Fairy
       end
     end
     DeepConnect.def_method_spec(self, "each(){DVAL}")
+
+    def each_buf(&block)
+      threshold = @opts[:pool_threshold]
+      threshold = CONF.HERE_POOL_THRESHOLD unless threshold
+      chunk = []
+      while import = @imports.pop
+	import.each do |e|
+	  #[REQ#89]
+
+	  chunk.push e
+	  if chunk.size > threshold
+	    block.call chunk
+	    chunk.clear
+	  end
+	end
+      end
+      if !chunk.empty?
+	block.call chunk
+      end
+    end
+    DeepConnect.def_method_spec(self, "each_buf(){DVAL}")
   end
 end
 
