@@ -73,6 +73,8 @@ module Fairy
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
 
     def_prop :LOCAL_INPUT_FILE_BUFFER_SIZE
+    def_prop :HERE_POOL_THRESHOLD
+    def_prop :LOCAL_OUTPUT_POOL_THRESHOLD
 
     def_prop :N_MOD_GROUP_BY
     def_prop :HASH_MODULE
@@ -194,6 +196,8 @@ module Fairy
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
   CONF.LOCAL_INPUT_FILE_BUFFER_SIZE = 1024*1024
+  CONF.HERE_POOL_THRESHOLD = 32000
+  CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "fairy/share/hash-md5"
