@@ -1,3 +1,11 @@
+Wed Jun  3 17:48:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-local-file-output.rb, local-file-output.rb: [SR#99]
+	  local-file-outputでまとめ送りする
+	* bhere.rb, here.rb: [SR#98] hereでまとめ送りする
+	* n-local-file-output.rb: 行分割がちゃんとできていなかった.
+	* fairy-BODY.templ, bin/fairy-cat: fairy-cat作成
+
 Wed Jun  3 15:24:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* local-file-input.rb, n-local-file-input.rb: [SR#82] local-fileで
